<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.no_1.hw6_multimediaplayer.ListActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp"
        android:weightSum="1">

        <ImageView
            android:id="@+id/imageViewShow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_launcher"
            android:layout_weight="0.88"
            android:contentDescription="@string/coverorlyric" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:orientation="horizontal"
            android:layout_weight="0.11">

            <Button
                android:id="@+id/buttonPrev"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/prev"
                tools:layout_gravity="center_vertical|center" />

            <Button
                android:id="@+id/buttonNext"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:text="@string/next"
                tools:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonHome"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2.29"
                android:text="@string/home" />

            <Button
                android:id="@+id/buttonCover"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="148dp"
                android:layout_height="match_parent"
                android:layout_weight="0.12"
                android:text="@string/cover" />

            <Button
                android:id="@+id/buttonLyric"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1.00"
                android:text="@string/lyric" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
